feat: minor change to assets

--- a/src/main/resources/assets/botjs/lang/zh_cn.json
+++ b/src/main/resources/assets/botjs/lang/zh_cn.json
@@ -1,6 +1,9 @@
 {
-  "botjs.menu.programmer.title": "编程器",
-  "botjs.menu.programmer.message": "在此处键入代码...",
   "botjs.menu.bot_mount_title": "挂载",
-  "entity.botjs.bot": "Bot"
+  "botjs.menu.programmer.message": "在此处键入代码...",
+  "botjs.menu.programmer.title": "编程器",
+  "entity.botjs.bot": "Bot",
+  "item.botjs.programmer": "编程器",
+  "item.botjs.switch": "开关",
+  "item.botjs.wrench": "扳手"
 }
