feat: textures for numerous upgrades

--- a/src/main/resources/assets/botjs/lang/zh_cn.json
+++ b/src/main/resources/assets/botjs/lang/zh_cn.json
@@ -2,8 +2,10 @@
   "botjs.menu.bot_mount_title": "挂载",
   "botjs.menu.programmer.title": "编程器",
   "entity.botjs.bot": "Bot",
+  "item.botjs.movement_upgrade": "移动升级",
   "item.botjs.output_upgrade": "输出升级",
   "item.botjs.programmer": "编程器",
   "item.botjs.switch": "开关",
+  "item.botjs.timing_upgrade": "时控升级",
   "item.botjs.wrench": "扳手"
 }
